--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,12 +3,6 @@ name: CI/CD
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-permissions:
-  contents: read
-  id-token: write
 
 jobs:
   build-and-push:
@@ -27,6 +21,7 @@ jobs:
         run: |
           cd app
           npm ci
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -34,25 +29,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Set ECR URI
-        run: |
-          ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
-          REGION=${{ secrets.AWS_REGION }}
-          REPO=${{ secrets.ECR_REPOSITORY }}
-          echo "ECR_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO" >> $GITHUB_ENV
-          echo "ECR_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
       - name: Login to ECR
         run: |
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
-            | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+          | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+
       - name: Build and push Docker image
         run: |
-          echo "Using ECR: $ECR_URI"
-          docker build -t $ECR_URI:latest ./app
-          docker tag $ECR_URI:latest $ECR_URI:${{ github.sha }}
-          docker push $ECR_URI:latest
-          docker push $ECR_URI:${{ github.sha }}
+          IMAGE_TAG="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${GITHUB_SHA}"
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "Building image: $IMAGE_TAG"
+          docker build -t $IMAGE_TAG ./app
+          docker push $IMAGE_TAG
   deploy:
+    needs: build-and-push
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
 
@@ -70,17 +60,13 @@ jobs:
       - name: Update kubeconfig
         run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
-      - name: Set ECR URI
-        run: |
-          ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
-          REGION=${{ secrets.AWS_REGION }}
-          REPO=${{ secrets.ECR_REPOSITORY }}
-          echo "ECR_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO" >> $GITHUB_ENV
-          echo "ECR_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
       - name: Deploy to EKS
         run: |
-          echo "Deploying image: $ECR_URI"
-          sed -i "s|REPLACE_WITH_ECR_URI|$ECR_URI|g" k8s/deployment.yaml
-          kubectl apply -f k8s/deployment.yaml
+          echo "IMAGE_TAG=$IMAGE_TAG"
+          if [ -z "$IMAGE_TAG" ]; then
+            echo "ERROR: IMAGE_TAG is empty!"
+            exit 1
+          fi
+
+          kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_TAG
           kubectl rollout status deployment/multi-env-app
-          kubectl apply -f k8s/service.yaml
