--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,12 +23,20 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+
     - name: Build and Push Image
       id: build-image
       run: |
-        IMAGE_TAG="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${GITHUB_SHA}"
+        ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}"
+        IMAGE_TAG="$ECR_URI:${GITHUB_SHA}"
         echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+        echo "Building image: $IMAGE_TAG"
         docker build -t $IMAGE_TAG ./app
+        echo "Pushing image..."
         docker push $IMAGE_TAG
 
 
