--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,21 +23,21 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
+    - name: Login to ECR
+      run: |
+        aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
+        | docker login --username AWS --password-stdin \
+          ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
 
     - name: Build and Push Image
       id: build-image
       run: |
-        ECR_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}"
-        IMAGE_TAG="$ECR_URI:${GITHUB_SHA}"
+        IMAGE_TAG="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${GITHUB_SHA}"
         echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
-
         echo "Building image: $IMAGE_TAG"
         docker build -t $IMAGE_TAG ./app
-        echo "Pushing image..."
         docker push $IMAGE_TAG
+        echo "Pushed image successfully!"
 
 
   deploy:
@@ -52,13 +52,17 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Update Kubeconfig
+    - name: Update kubeconfig
       run: |
         aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
     - name: Deploy to EKS
       run: |
         IMAGE_TAG="${{ needs.build.outputs.image_tag }}"
-        echo "Deploying image: $IMAGE_TAG"
+        echo "Deploying: $IMAGE_TAG"
+        if [ -z "$IMAGE_TAG" ]; then
+          echo "ERROR: IMAGE_TAG is empty"
+          exit 1
+        fi
         kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_TAG
-        kubectl rollout status deployment/multi-env-app
+        kubectl rollout status deployment/multi-env-app --timeout=60s
