--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,12 +6,8 @@ on:
 
 jobs:
 
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
-
-    outputs:
-      image_tag: ${{ steps.build-image.outputs.image_tag }}
-
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -28,22 +24,18 @@ jobs:
         aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
         | docker login --username AWS --password-stdin \
           ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
-        echo "✅ Docker login successful"
 
-    - name: Build and Push Image
-      id: build-image
+    - name: Build and Push Docker image
       run: |
         IMAGE_TAG="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${GITHUB_SHA}"
-        echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
         echo "Building image: $IMAGE_TAG"
         docker build -t $IMAGE_TAG ./app
         docker push $IMAGE_TAG
         echo "Pushed image successfully!"
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
-
+    needs: build-and-push
     steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -58,11 +50,8 @@ jobs:
 
     - name: Deploy to EKS
       run: |
-        IMAGE_TAG="${{ needs.build.outputs.image_tag }}"
-        echo "Deploying: $IMAGE_TAG"
-        if [ -z "$IMAGE_TAG" ]; then
-          echo "ERROR: IMAGE_TAG is empty. Build step failed or output not set."
-          exit 1
-        fi
+        # اعمل deploy مباشرة باستخدام نفس الـ SHA اللي استخدمناه في build
+        IMAGE_TAG="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${GITHUB_SHA}"
+        echo "Deploying image: $IMAGE_TAG"
         kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_TAG
         kubectl rollout status deployment/multi-env-app --timeout=5m
